schlosna: Collections.emptyList -> List.of()